# custom-atlassian-api

./: .gitignore  CHANGELOG.md  PROGRESS.md  README.md  example_usage.py  main.py  pyproject.toml
atlassian/: __init__.py
atlassian/common/: __init__.py  base.py  client.py  exceptions.py
atlassian/common/auth/: __init__.py  oauth1.py
atlassian/confluence/: __init__.py  client.py
atlassian/confluence/models/: __init__.py  content.py  space.py  user.py
atlassian/confluence/resources/: __init__.py  accessmode.py  audit.py  content.py  group.py  longtask.py  notification.py  search.py  space.py  user.py  webhook.py
atlassian/jira/: __init__.py  client.py
atlassian/jira/models/: __init__.py  agile.py  attachment.py  avatar.py  common.py  component.py  custom_field.py  field.py  filter.py  group.py  issue.py  issue_link.py  issue_type.py  permission.py  project.py  search.py  (+3 more)
atlassian/tempo/: __init__.py  client.py
docs/: CONFLUENCE_API_CHANGES_7.6.1.md  CONFLUENCE_API_REGISTRY.md  CONFLUENCE_TEST_COVERAGE.md  JIRA_API_REGISTRY.md  OAUTH1_DEVELOPER_GUIDE.md  TEMPO_API_REGISTRY.md  confluence_notifications_solution.md  confluence_watch_feature.md
examples/: CONFLUENCE_OAUTH1_DEMO.md  JIRA_OAUTH1_DEMO.md  __init__.py  confluence_oauth1_demo.py  jira_oauth1_demo.py  oauth1_demo_common.py
tests/: __init__.py  test_confluence.py  test_confluence_7x_apis.py  test_confluence_comprehensive.py  test_confluence_new_apis.py  test_confluence_oauth1_demo.py  test_confluence_remaining.py  test_jira_oauth1_demo.py  test_login.py  test_oauth1_signing.py  test_tempo.py
(+50 files in other folders)
