[project]
name = "custom-atlassian-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
]

[project.optional-dependencies]
oauth = [
    "authlib>=1.7.2",
]

[dependency-groups]
dev = [
    "authlib>=1.7.2",
    "pytest>=9.0.2",
]
